@@ -1,5 +1,7 @@
 2009-08-26  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* vc-git.el (vc-git-register): Use "git add" for directories.
+
 	* vc-dir.el (vc-dir-node-directory, vc-dir-update): Get the parent
 	directory correctly in case the item is a directory itself.
 
